add header, nav, aside

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>The Present</title>
 </head>
 <body>
+
+    <header>Facts and not opinions</header>
+
+    <nav>
+        <a href="#">About</a>
+        <a href="#">How to sail the seven seas</a>
+    </nav>
+
+    <aside>Why pirates are better than ninjas</aside>
     
 </body>
 </html>
