--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
 
     <aside>Why pirates are better than ninjas</aside>
     
+    <main>
+        <article>
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+        </article>
+    </main>
+
 </body>
 </html>
