--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         <article>
             <section>
                 <p>
-                    Life and adventure
+                    Life of adventure
                 </p>
             </section>
             <section>
                 <p>
-                    Doesn't need stealth - just walk up and take it
+                    Richer than ninja
                 </p>
             </section>
             <section>
                 <p>
-                    Richer
+                    Stealth isn't needed; just rock up and take the loot
                 </p>
             </section>
             <!-- <section id="image">
